tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_19.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := (x > 1223);
  (* error *)  y := (y - y);
               q := (q & ((1223 # 200) & ((- 200) >= 0)));
               x := y;
               r := (~ ((0 # (200 + 1)) & ((2 # 0) OR (2 <= z))));
               y := (1223 * (- 0));
               q := p;
               q := ((- (x + (y MOD x))) >= ((200 DIV (z * 2)) MOD z));
               z := (+ 0);
               r := p
END Test12.